Update 'oh3ieq1kq-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:ebb86d6e39ae382a27f228eae5809f3c64618562@sha256:ff7d21fae8e767822f48c6668420863d0174c8ced089d042bf61c29f027229d9

--- a/components/oh3ieq1kq-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/oh3ieq1kq-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: oh3ieq1kq-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:ebb86d6e39ae382a27f228eae5809f3c64618562@sha256:ff7d21fae8e767822f48c6668420863d0174c8ced089d042bf61c29f027229d9
+          name: container-image
